--- a/main.css
+++ b/main.css
@@ -23,19 +23,18 @@
 
 body {
    color: #4B4E75;
-   /*background-image: url('concrete_seamless.png');*/
    font-size: 18px;
    background: #ecf0f1;
 }
 h3 {
    /*font-family: MyWebFont;*/
-   color: #A94634;
+   color: #A84317;
    font-size: 22px;
 }
 
 h2 {
    /*font-family: MyWebFont;*/
-   color: #A94634;
+   color: #A84317;
    font-size: 26px;
 }
 h1{
@@ -43,7 +42,7 @@ h1{
    font-size: 56px;
    padding: 10px;
    margin: 0;
-   color: #A94634;
+   color: #A84317;
 }
 .container {
    padding-left: 40px;
@@ -62,7 +61,7 @@ h1{
 
 .editable {
    color: #A94634;
-   font-weight: bold;
+   /*font-weight: bold;*/
    border-radius: 1em;
 }
 
@@ -75,4 +74,5 @@ header {
    border-top: 0;
    /*border-radius: 0 0 2rem 2rem; */
    /*background: #bdc3c7;*/
+   background-image: url('concrete_seamless.png');
 }
