--- a/main.css
+++ b/main.css
@@ -73,6 +73,6 @@ header {
    border-bottom: 3px solid #4B4E75;
    border-top: 0;
    /*border-radius: 0 0 2rem 2rem; */
-   /*background: #bdc3c7;*/
+   background: #bdc3c7;
    background-image: url('concrete_seamless.png');
 }
